Sat Sep  1 15:58:11 2001  Christopher Faylor <cgf@cygnus.com>

	* mount.cc (main): Eliminate excess arguments in printf.

2001-08-30  Egor Duda  <deo@logos-m.ru>

	* dumper.h: Update copyright notice.
	* dumper.cc: Ditto.
	* dumper.cc: (dumper::print_core_section_list): New function.
	* dumper.h: (dumper::print_core_section_list): Declare it.
	* dumper.cc (print_section_name): New function.
	(dumper::collect_process_information): Augment debugging output.
	Stop debugee processing if it posts double exception.
	(usage): Fix typo in option name.

Tue Aug 28 14:45:02 2001  Christopher Faylor <cgf@cygnus.com>

	* mount.cc (main): Issue correct warning for 'not enough arguments'.

2001-08-14  Joerg Schaible <joerg.schaible@gmx.de>

	* cygpath.cc (main): Support -w for Windows (System) directories and
	return physical correct orthography for the Windows System dir.

2001-07-14   Chris Genly  <chgenly@alum.mit.edu>

	* regtool.cc (find_key): Handle keys with only one subkey.

Wed Jun 27 22:46:10 2001  Christopher Faylor <cgf@cygnus.com>

	* regtool.cc (find_key): Revert previous change.

Wed Jun 27 13:37:41 2001  Keith Starsmeare" <keith_starsmeare@yahoo.co.uk>

	* regtool.cc (find_key): Allow '/' as a synonym for '\\'.

Fri Jun 15 00:49:21 2001  Christopher Faylor <cgf@cygnus.com>

	* mkpasswd.c (main): Output passwd file in binary mode so that there
	are no CRs in the file.
	* umount.cc (remove_all_user_mounts): Don't try to remove /cygdrive
	mounts.

Tue May  1 10:50:48 2001  Christopher Faylor <cgf@cygnus.com>

	* mkpasswd.c (enum_users): Use /bin/bash as the default shell.
	(main): Ditto.

Sat Apr 28 22:32:01 2001  Christopher Faylor <cgf@cygnus.com>

	* passwd.cc (ttymnam): New function.
	(main): Use ttynam() to report name of tty.

2001-04-19  Egor Duda  <deo@logos-m.ru>

	* dumper.cc (dumper::init_core_dump): Set architecture field in dump
	header.

Mon Apr 16 15:08:00 2001  Corinna Vinschen <vinschen@redhat.com>
